--- a/src/i18n/json/it.json
+++ b/src/i18n/json/it.json
@@ -90,6 +90,7 @@
         }
     },
     "others": {
-        "dropzone": "Trascina un file di testo per tradurre."
+        "dropzone": "Trascina un file di testo per tradurre.",
+        "notFound": "Questa pagina era solo un sogno..."
     }
 }
