--- a/src/i18n/json/de.json
+++ b/src/i18n/json/de.json
@@ -24,7 +24,8 @@
     "pages": {
         "home": {
             "leftTitle": "Willkommen bei ",
-            "rightTitle": "!"
+            "rightTitle": "!",
+            "functionalitiesDesc": "Probieren Sie die verschiedenen Funktionen des intelligenten Assistenten aus."
         },
         "translator": {
             "languages": {
