--- a/src/i18n/json/es.json
+++ b/src/i18n/json/es.json
@@ -24,7 +24,8 @@
     "pages": {
         "home": {
             "leftTitle": "¡Bienvenidos a ",
-            "rightTitle": "!"
+            "rightTitle": "!",
+            "functionalitiesDesc": "Prueba las distintas funcionalidades del asistente inteligente."
         },
         "translator": {
             "languages": {
