--- a/src/i18n/json/it.json
+++ b/src/i18n/json/it.json
@@ -24,7 +24,8 @@
     "pages": {
         "home": {
             "leftTitle": "Benvenuti a ",
-            "rightTitle": "!"
+            "rightTitle": "!",
+            "functionalitiesDesc": "Prova le diverse funzionalità dell'assistente intelligente."
         },
         "translator": {
             "languages": {
